Update .env.example with new secrets and placeholders
Set JWT secrets to new example values and cleared sensitive fields to empty placeholders for configuration. This improves clarity for environment setup and enhances security by not exposing real credentials.

--- a/.env.example
+++ b/.env.example
@@ -7,27 +7,23 @@ BACKEND_RUL=http://localhost:5000
 
 # Database Configuration
 
-MONGO_URI=you_mongo_url
+MONGO_URI=
 
 # JWT Configuration
 
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=dvst_jwt_secret_key_2024_high_entropy_string
 JWT_EXPIRES_IN=15m
-JWT_REFRESH_SECRET=your_refresh_secret
+JWT_REFRESH_SECRET=dvst_refresh_token_secret_2024_unique_string
 JWT_REFRESH_EXPIRES_IN=7d
+
 
 
 # Email Configuration
 
-SENDGRID_API_KEY=YOUR_SENDGRID_API_KEY
-ADMIN_USERNAME=YOUR_ADMIN_USERNAME
-# EMAIL_APP_PASSWORD=krhwrzhapoqyaejd
+SENDGRID_API_KEY=
+ADMIN_USERNAME=
+SENDER_VERIFICATION_EMAIL=
+EMAIL_APP_PASSWORD=
 
-ADMIN_EMAIL=YOUR_VERIFY_EMAIL_SANDGRID
-SENDGRID_FROM_NAME= Backend Support
-
-
-SENDER_VERIFICATION_EMAIL=YOUR_VERIFY_EMAIL_SANDGRID
-
-
-ADMIN_EMAIL=YOUR_ADMIN_EMAIL
+SENDGRID_FROM_NAME=
+ADMIN_EMAIL=
