--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "rescuewheels-backend",
+  "name": "nodejs-secure-auth",
   "version": "1.0.0",
-  "description": "Backend for RescueWheels app with secure authentication system.",
+  "description": "Simple Node.js secure authentication system.",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "node --watch server.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,8 +29,5 @@
     "speakeasy": "^2.0.0",
     "twilio": "^5.6.1",
     "xss-clean": "^0.1.4"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   }
 }
