Integrate Inngest for background jobs and workflows
Added Inngest integration for reliable background jobs and event-driven workflows. Introduced new Inngest configuration, event triggers, and functions for email sending, user verification, and scheduled cleanup tasks. Updated documentation to reflect Inngest usage and improved registration flow with pending user management. API now exposes an /api/inngest endpoint for Inngest function handling.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch server.js"
+    "dev": "node --watch server.js",
+    "dev:inngest": "npx inngest-cli dev",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +23,7 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "hpp": "^0.2.3",
+    "inngest": "^3.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
     "node-fetch": "^2.7.0",
